# rosetta

./: .gitignore  Cargo.toml  rosetta-settings.toml.example
src/: cache.rs  generator.rs  lib.rs  llm.rs  main.rs  parser.rs  utils.rs
src/generator/: pandoc.rs
src/llm/: dummy.rs  openai.rs  playground.rs
src/parser/: pandoc.rs
